--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>core</module>
 		<module>spring</module>
 		<module>xmlbeans</module>
+		<module>test-integration</module>
 	</modules>
 
 	<properties>
