--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -57,7 +57,7 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
-			<scope>test</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
