--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -46,12 +46,12 @@
 		<dependency>
 			<groupId>org.brekka</groupId>
 			<artifactId>stillingar-spring</artifactId>
-			<version>${stillingar-version}</version>
+			<version>0.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.brekka</groupId>
 			<artifactId>stillingar-xmlbeans</artifactId>
-			<version>${stillingar-version}</version>
+			<version>0.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
