--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,32 @@
     <packaging>jar</packaging>
 
     <name>Stillingar - Core</name>
+    
+    <inceptionYear>2011</inceptionYear>
+
+    <url>https://github.com/brekka/stillingar/wiki</url>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/brekka/stillingar.git</url>
+        <connection>https://github.com/brekka/stillingar.git</connection>
+    </scm>
+    
+    <developers>
+        <developer>
+            <name>Andrew Taylor</name>
+            <email>andrew@brekka.org</email>
+            <timezone>GMT</timezone>
+        </developer>
+    </developers>
+    
 
     <build>
         <plugins>
@@ -24,8 +50,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
                     <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
@@ -64,8 +90,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 </project>
