--- a/pom.xml
+++ b/pom.xml
@@ -1,43 +1,50 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.brekka</groupId>
-	<artifactId>stillingar</artifactId>
-	<version>1.0</version>
-	<packaging>pom</packaging>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.brekka</groupId>
+    <artifactId>stillingar</artifactId>
+    <version>1.0</version>
+    <packaging>pom</packaging>
 
-	<name>Stillingar (Configuration)</name>
+    <name>Stillingar (Configuration)</name>
 
-	<description>
+    <description>
         Application configuration library
     </description>
+
+    <inceptionYear>2011</inceptionYear>
+
+    <url>https://github.com/brekka/stillingar/wiki</url>
+
+    <scm>
+        <url>https://github.com/brekka/stillingar.git</url>
+        <connection>https://github.com/brekka/stillingar.git</connection>
+    </scm>
     
-	<inceptionYear>2011</inceptionYear>
-	
-	<licenses>
-		<license>
-			<name>Apache License</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <developers>
-       <developer>
-           <name>Andrew Taylor</name>
-           <email>andrew@brekka.org</email>
-           <timezone>GMT</timezone>
-       </developer>
+        <developer>
+            <name>Andrew Taylor</name>
+            <email>andrew@brekka.org</email>
+            <timezone>GMT</timezone>
+        </developer>
     </developers>
 
-	<modules>
-		<module>core</module>
-		<module>spring</module>
-		<module>xmlbeans</module>
-		<module>test-integration</module>
-	</modules>
+    <modules>
+        <module>core</module>
+        <module>spring</module>
+        <module>xmlbeans</module>
+        <module>test-integration</module>
+    </modules>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
