--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -15,6 +15,31 @@
     <packaging>jar</packaging>
 
     <name>Stillingar - Spring</name>
+    
+    <inceptionYear>2011</inceptionYear>
+
+    <url>https://github.com/brekka/stillingar/wiki</url>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/brekka/stillingar.git</url>
+        <connection>https://github.com/brekka/stillingar.git</connection>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Andrew Taylor</name>
+            <email>andrew@brekka.org</email>
+            <timezone>GMT</timezone>
+        </developer>
+    </developers>
 
 	<build>
 		<plugins>
@@ -97,6 +122,5 @@
 		<spring-release-version>3.0.5.RELEASE</spring-release-version>
 		<junit-version>4.8.2</junit-version>
 		<commons-lang-version>2.6</commons-lang-version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
