--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -11,8 +11,33 @@
 	</parent>
 
 	<artifactId>stillingar-test-integration</artifactId>
+    
 	<version>1.0.0</version>
 
+    <inceptionYear>2011</inceptionYear>
+
+    <url>https://github.com/brekka/stillingar/wiki</url>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/brekka/stillingar.git</url>
+        <connection>https://github.com/brekka/stillingar.git</connection>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Andrew Taylor</name>
+            <email>andrew@brekka.org</email>
+            <timezone>GMT</timezone>
+        </developer>
+    </developers>
 
 	<dependencies>
 		<dependency>
@@ -68,8 +93,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
@@ -110,6 +135,5 @@
 		<spring-release-version>3.0.5.RELEASE</spring-release-version>
 		<junit-version>4.8.2</junit-version>
 		<commons-lang-version>2.6</commons-lang-version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
