--- a/xmlbeans/pom.xml
+++ b/xmlbeans/pom.xml
@@ -16,6 +16,31 @@
 
     <name>Stillingar - XML Beans</name>
 
+    <inceptionYear>2011</inceptionYear>
+
+    <url>https://github.com/brekka/stillingar/wiki</url>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/brekka/stillingar.git</url>
+        <connection>https://github.com/brekka/stillingar.git</connection>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Andrew Taylor</name>
+            <email>andrew@brekka.org</email>
+            <timezone>GMT</timezone>
+        </developer>
+    </developers>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.brekka</groupId>
@@ -48,8 +73,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
