--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -84,6 +84,11 @@
 			<version>1.2.16</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
