--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
+		<groupId>org.brekka.stillingar</groupId>
 		<artifactId>stillingar</artifactId>
-		<groupId>org.brekka</groupId>
 		<relativePath>../pom.xml</relativePath>
 		<version>1.0</version>
 	</parent>
