--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -14,7 +14,7 @@
     
     <name>Stillingar - Integration tests</name>
     
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
     <inceptionYear>2011</inceptionYear>
 
@@ -71,14 +71,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.brekka</groupId>
+			<groupId>org.brekka.stillingar</groupId>
 			<artifactId>stillingar-spring</artifactId>
-			<version>1.0.0</version>
+			<version>${stillingar-core-version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.brekka</groupId>
+			<groupId>org.brekka.stillingar</groupId>
 			<artifactId>stillingar-xmlbeans</artifactId>
-			<version>1.0.0</version>
+			<version>${stillingar-xmlbeans-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -138,7 +138,8 @@
 	</build>
 
 	<properties>
-		<stillingar-version>1.0.0</stillingar-version>
+		<stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
+		<stillingar-xmlbeans-version>1.0.0-SNAPSHOT</stillingar-xmlbeans-version>
 		<spring-release-version>3.0.5.RELEASE</spring-release-version>
 		<junit-version>4.8.2</junit-version>
 		<commons-lang-version>2.6</commons-lang-version>
