--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>core</module>
         <module>spring</module>
         <module>xmlbeans</module>
+        <module>jaxb</module>
         <module>test-integration</module>
     </modules>
 
