Initial JAXB work

--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -134,6 +134,21 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <packageName>org.brekka.stillingar.jaxb.test.intg</packageName>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
