--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -81,6 +81,11 @@
 			<version>${stillingar-xmlbeans-version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.brekka.stillingar</groupId>
+			<artifactId>stillingar-jaxb</artifactId>
+			<version>${stillingar-jaxb-version}</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
@@ -154,6 +159,7 @@
 
 	<properties>
 		<stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
+		<stillingar-jaxb-version>0.0.1-SNAPSHOT</stillingar-jaxb-version>
 		<stillingar-xmlbeans-version>1.0.0-SNAPSHOT</stillingar-xmlbeans-version>
 		<spring-release-version>3.0.5.RELEASE</spring-release-version>
 		<junit-version>4.8.2</junit-version>
