--- a/test-integration/pom.xml
+++ b/test-integration/pom.xml
@@ -124,21 +124,22 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>xmlbeans-maven-plugin</artifactId>
-				<version>2.3.3</version>
-				<configuration>
-					<javaSource>1.5</javaSource>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>xmlbeans</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>xmlbeans-maven-plugin</artifactId>
+                <version>2.3.3</version>
+                <configuration>
+                    <javaSource>1.5</javaSource>
+                    <schemaDirectory>../core/src/test/xsd</schemaDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>xmlbeans</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
@@ -151,7 +152,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <packageName>org.brekka.stillingar.jaxb.test.intg</packageName>
+                    <packageName>org.brekka.stillingar.test.jaxb</packageName>
+                    <schemaDirectory>../core/src/test/xsd</schemaDirectory>
                 </configuration>
             </plugin>
 		</plugins>
