--- a/xmlbeans/pom.xml
+++ b/xmlbeans/pom.xml
@@ -93,6 +93,22 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>xmlbeans-maven-plugin</artifactId>
+                <version>2.3.3</version>
+                <configuration>
+                    <javaSource>1.5</javaSource>
+                    <schemaDirectory>../core/src/test/xsd</schemaDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>xmlbeans-test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
