--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,11 +16,11 @@
     <packaging>jar</packaging>
 
     <name>Stillingar - Core</name>
-    
+
     <inceptionYear>2011</inceptionYear>
 
     <url>https://github.com/brekka/stillingar/wiki</url>
-    
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -28,12 +28,12 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
     </scm>
-    
+
     <developers>
         <developer>
             <name>Andrew Taylor</name>
@@ -41,7 +41,7 @@
             <timezone>GMT</timezone>
         </developer>
     </developers>
-    
+
 
     <build>
         <plugins>
@@ -50,8 +50,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                     <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
@@ -68,6 +68,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
