--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -1,25 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<parent>
-		<groupId>org.brekka.stillingar</groupId>
-		<artifactId>stillingar</artifactId>
-		<relativePath>../pom.xml</relativePath>
-		<version>1.0</version>
-	</parent>
+    <parent>
+        <groupId>org.brekka.stillingar</groupId>
+        <artifactId>stillingar</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>1.0</version>
+    </parent>
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>stillingar-spring</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>stillingar-spring</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
     <name>Stillingar - Spring</name>
-    
+
     <inceptionYear>2011</inceptionYear>
 
     <url>https://github.com/brekka/stillingar/wiki</url>
-    
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -27,7 +27,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <url>https://github.com/brekka/stillingar.git</url>
         <connection>https://github.com/brekka/stillingar.git</connection>
@@ -41,40 +41,45 @@
         </developer>
     </developers>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<encoding>utf-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8.1</version>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.5.1</version>
             </plugin>
-		</plugins>
-	</build>
-	<dependencies>
+        </plugins>
+    </build>
+    <dependencies>
         <dependency>
             <groupId>org.brekka.stillingar</groupId>
             <artifactId>stillingar-core</artifactId>
@@ -86,38 +91,38 @@
             <version>${stillingar-xmlbeans-version}</version>
             <optional>true</optional>
         </dependency>
-        
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring-release-version}</version>
-		</dependency>
-        
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring-release-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>${commons-lang-version}</version>
-			<scope>test</scope>
-		</dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring-release-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-release-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons-lang-version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
-	</dependencies>
+    </dependencies>
 
-	<properties>
-		<stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
-		<stillingar-xmlbeans-version>1.0.0-SNAPSHOT</stillingar-xmlbeans-version>
-		<spring-release-version>3.0.5.RELEASE</spring-release-version>
-		<junit-version>4.8.2</junit-version>
-		<commons-lang-version>2.6</commons-lang-version>
-	</properties>
+    <properties>
+        <stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
+        <stillingar-xmlbeans-version>1.0.0-SNAPSHOT</stillingar-xmlbeans-version>
+        <spring-release-version>3.0.5.RELEASE</spring-release-version>
+        <junit-version>4.8.2</junit-version>
+        <commons-lang-version>2.6</commons-lang-version>
+    </properties>
 </project>
