--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,12 @@
     </developers>
 
     <modules>
+        <module>api</module>
         <module>core</module>
         <module>spring</module>
         <module>xmlbeans</module>
         <module>xmlbeans-xpath</module>
         <module>jaxb</module>
-        <module>sample</module>
         <module>test-integration</module>
     </modules>
 
