--- a/core/pom.xml
+++ b/core/pom.xml
@@ -83,6 +83,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.brekka.stillingar</groupId>
+            <artifactId>stillingar-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
