--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>spring-context</artifactId>
             <version>${spring-release-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring-release-version}</version>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
