Change test-integration to just be an example project. Add JDK7 inotify based resource monitor.

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <module>xmlbeans</module>
         <module>xmlbeans-xpath</module>
         <module>jaxb</module>
-        <module>test-integration</module>
+        <module>example</module>
     </modules>
 
     <properties>
