--- a/example/pom.xml
+++ b/example/pom.xml
@@ -1,5 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
@@ -7,16 +10,15 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
+    <artifactId>stillingar-example</artifactId>
 
-    <artifactId>stillingar-jaxb</artifactId>
+    <name>Stillingar - Example web application with integration tests</name>
+    
+    <packaging>war</packaging>
+
     <version>1.0.0-SNAPSHOT</version>
 
-    <packaging>jar</packaging>
-
-    <name>Stillingar - JAXB</name>
-
-    <inceptionYear>2012</inceptionYear>
+    <inceptionYear>2011</inceptionYear>
 
     <url>https://github.com/brekka/stillingar/wiki</url>
 
@@ -43,23 +45,63 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.brekka.stillingar</groupId>
-            <artifactId>stillingar-api</artifactId>
-            <version>${stillingar-api-version}</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-release-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brekka.stillingar</groupId>
+            <artifactId>stillingar-spring</artifactId>
+            <version>${stillingar-core-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brekka.stillingar</groupId>
+            <artifactId>stillingar-xmlbeans</artifactId>
+            <version>${stillingar-xmlbeans-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.brekka.stillingar</groupId>
+            <artifactId>stillingar-jaxb</artifactId>
+            <version>${stillingar-jaxb-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>net.iharder</groupId>
-            <artifactId>base64</artifactId>
-            <version>2.3.7</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-release-version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons-lang-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.2</version>
         </dependency>
     </dependencies>
 
@@ -96,27 +138,43 @@
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
+                <artifactId>xmlbeans-maven-plugin</artifactId>
+                <version>2.3.3</version>
+                <configuration>
+                    <javaSource>1.5</javaSource>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>xmlbeans</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
                 <version>1.5</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>testXjc</goal>
+                            <goal>xjc</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <packageName>org.brekka.stillingar.test.jaxb</packageName>
-                    <schemaDirectory>../core/src/test/xsd</schemaDirectory>
+                    <packageName>org.brekka.stillingar.example</packageName>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
-        <stillingar-api-version>1.0.0-SNAPSHOT</stillingar-api-version>
-        <junit-version>4.8.2</junit-version>
+        <stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
+        <stillingar-jaxb-version>1.0.0-SNAPSHOT</stillingar-jaxb-version>
+        <stillingar-xmlbeans-version>1.0.0-SNAPSHOT</stillingar-xmlbeans-version>
         <spring-release-version>3.0.5.RELEASE</spring-release-version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit-version>4.8.2</junit-version>
+        <commons-lang-version>2.6</commons-lang-version>
     </properties>
 </project>
