Extract date/time conversion into a source specific adapter. Add support for duration (via JodaTime) and the other common JodaTime classes (all optional).

--- a/xmlbeans/pom.xml
+++ b/xmlbeans/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>xmlbeans</artifactId>
             <version>${xmlbeans-version}</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6.2</version>
+            <optional>true</optional>
+        </dependency>
 
 
         <dependency>
