--- a/jaxb/pom.xml
+++ b/jaxb/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>stillingar-core</artifactId>
             <version>${stillingar-core-version}</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6.2</version>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
