--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -1,20 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
         <relativePath>../pom.xml</relativePath>
         <version>1.0</version>
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
     <artifactId>stillingar-spring</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-
     <packaging>jar</packaging>
 
     <name>Stillingar - Spring</name>
+
+    <description>
+        Stillingar is a configuration framework for Java applications. It supports runtime reloading of configuration files,
+        which can consist of XML or properties files. When used in a Spring environment, configuration values can be autowired by
+        expression or if XMLBeans/JAXB are used, by type.
+        
+        This module provides integration with the Spring Framework. It provides:
+        
+        - The 'stil' schema based configuration for easy configuration of a Stillingar configuration service.
+        - A BeanPostProcessor for resolving @Configured annotated fields/methods, applying the configuration.
+        - A PropertyPlaceholderConfigurer for configuring non-Stillingar aware beans. Property based fields will be updated
+          at runtime if the configuration changes.
+        - A search path for locating the configuration file form defaulted/configurable locations, or just falling back to 
+          classpath defaults.
+        - Loading nested Spring contexts from configuration files.
+        - Configuration expressions can contain nested expressions.
+    </description>
 
     <inceptionYear>2011</inceptionYear>
 
@@ -41,49 +56,11 @@
         </developer>
     </developers>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>utf-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
             <groupId>org.brekka.stillingar</groupId>
             <artifactId>stillingar-core</artifactId>
-            <version>${stillingar-core-version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -98,42 +75,26 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Test -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring-release-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>${commons-lang-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.9.0</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
-        <spring-release-version>3.0.5.RELEASE</spring-release-version>
-        <junit-version>4.8.2</junit-version>
-        <commons-lang-version>2.6</commons-lang-version>
-    </properties>
 </project>
