--- a/xmlbeans/pom.xml
+++ b/xmlbeans/pom.xml
@@ -1,20 +1,33 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.brekka.stillingar</groupId>
         <artifactId>stillingar</artifactId>
         <version>1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>stillingar-xmlbeans</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-
     <packaging>jar</packaging>
 
     <name>Stillingar - XML Beans</name>
+
+    <description>
+        Stillingar is a configuration framework for Java applications. It supports runtime reloading of configuration files,
+        which can consist of XML or properties files. When used in a Spring environment, configuration values can be autowired by
+        expression or if XMLBeans/JAXB are used, by type.
+        
+        This module provide support for XMLBeans as the loading mechanism for XML based configuration files. XMLBeans provides the most feature 
+        complete solution including:
+        
+        - Good XPath support for simple element lookup. Advanced support provided with the stillingar-xmlbeans-xpath library.
+        - Compiled-in schemas. Validation comes with no extra effort.
+        - Reuse your components and their configuration. XMLBeans will identify externally generated schemas and will reference them
+          from the objects it is generating.
+        - Autowire by any type including anonymous.
+    </description>
 
     <inceptionYear>2011</inceptionYear>
 
@@ -45,79 +58,44 @@
         <dependency>
             <groupId>org.brekka.stillingar</groupId>
             <artifactId>stillingar-core</artifactId>
-            <version>${stillingar-core-version}</version>
+            <version>${project.version}</version>
         </dependency>
+        
         <dependency>
             <groupId>org.apache.xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
-            <version>${xmlbeans-version}</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>1.6.2</version>
             <optional>true</optional>
         </dependency>
-
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
+        </dependency>
+        
+        <!-- Test -->
+        <dependency>
+            <groupId>org.brekka.stillingar</groupId>
+            <artifactId>stillingar-xmlbeans-xpath</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring-release-version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.iharder</groupId>
             <artifactId>base64</artifactId>
-            <version>2.3.7</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.brekka.stillingar</groupId>
-            <artifactId>stillingar-xmlbeans-xpath</artifactId>
-            <version>${stillingar-xpath-version}</version>
-            <scope>test</scope>
-        </dependency>
-        
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>utf-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>xmlbeans-maven-plugin</artifactId>
@@ -134,22 +112,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
-            </plugin>
         </plugins>
     </build>
-
-
-
-    <properties>
-        <stillingar-core-version>1.0.0-SNAPSHOT</stillingar-core-version>
-        <stillingar-xpath-version>1.0.0-SNAPSHOT</stillingar-xpath-version>
-        <xmlbeans-version>2.4.0</xmlbeans-version>
-        <junit-version>4.8.2</junit-version>
-        <spring-release-version>3.0.5.RELEASE</spring-release-version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 </project>
